--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,12 +7,12 @@ services:
     ports:
       - 9000:80
     depends_on:
-      - mysql_db  # Garante que o serviço de banco de dados seja iniciado antes
+      - mysql_db
   mysql_db:
     image: mysql:latest
     environment:
       MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: laravel  # Certifique-se de que o nome do banco de dados aqui seja correto
+      MYSQL_DATABASE: laravel
     ports:
       - 3306:3306
   phpmyadmin:
